# take_before

./: CMakeLists.txt  CMakePresets.json  README.md
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-check.yml
examples/: CMakeLists.txt  take_before_as_default_projection.cpp  take_before_direct_usage.cpp
include/beman/take_before/: take_before.hpp
infra/cmake/: use-fetch-content.cmake
src/beman/take_before/: CMakeLists.txt  beman.take_before-config.cmake.in  take_before.cpp
tests/beman/take_before/: CMakeLists.txt  take_before.test.cpp
